# opendex

./: .env.example  .gitignore  README.md  docker-compose.yaml  install.sh
frontend/: .prettierrc  Dockerfile  package.json  pnpm-lock.yaml
pgadmin/: servers.json
radicale/: Dockerfile  alembic.ini  config  pyproject.toml
radicale/radicale_storage_postgresql/: db.py
radicale/radicale_storage_postgresql/migrations/: env.py
traefik/rules/: app.yaml  pgadmin.yaml  radicale.yaml  traefik.yaml
